# py_web_hw-7

./: alembic.ini  config.py  connect_db.py  hw_7.db  main.py  model_ref.py  models.py  my_select.py  pyproject.toml  seed.py
alembic/: env.py
alembic/versions/: 4a2036f36b3a_init.py  814e8081274c_init.py  fc3c22645c74_init.py
