[tool.poetry]
name = "py-web-hw-7"
version = "0.1.0"
description = ""
authors = ["Ihor Siedielnikov <sisemail92@gmail.com>"]
readme = "README.md"
packages = [{include = "py_web_hw_7"}]

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.12.0"
sqlalchemy = "^2.0.20"
psycopg2 = "^2.9.7"
faker = "^19.4.0"
psycopg2-binary = "^2.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
